G5V8DT-28918 Зависание 1C:EDT при вызове контент-ассиста в определенном (#125)
месте

Co-authored-by: Maxim Dzyuba <dzym@1c.ru>